--- a/backend/views/home.ejs
+++ b/backend/views/home.ejs
@@ -4,18 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <title>Twitch Emote Tracker</title>
 </head>
 <body>
     <h1>Twitch Emote Tracker</h1>
-    <ul>
-        <% for (let emote of emotes) { %>
-            <li>
-                <img id="<%= emote.name %> " src=<%= emote.imageUrl %> alt="">
-                <span id="<%= emote.name %>Count"><%= emote.count %> </span>
-            </li>
-        <% } %>
-    </ul>
+    <div class="container">
+        <div class="row">
+            <% for (let emote of emotes) { %>
+                <div class="col-lg-1">
+                    <img id="<%= emote.name %> " src=<%= emote.imageUrl %> alt="">
+                    <span id="<%= emote.name %>Count"><%= emote.count %> </span>
+                </div>
+            <% } %>
+        </div>
+    </div>
 
     <script>
         // eventSource will receive events from /stream
@@ -29,6 +32,7 @@
             emoteCount.innerText = dataObject.count
         }
     </script>
-
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js" integrity="sha384-SR1sx49pcuLnqZUnnPwx6FCym0wLsk5JZuNx2bPPENzswTNFaQU1RDvt3wT4gWFG" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.min.js" integrity="sha384-j0CNLUeiqtyaRmlzUHCPZ+Gy5fQu0dQ6eZ/xAww941Ai1SxSY+0EQqNXNE6DZiVc" crossorigin="anonymous"></script>
 </body>
 </html>
