--- a/backend/views/home.ejs
+++ b/backend/views/home.ejs
@@ -5,15 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+    <link rel="stylesheet" href="/stylesheets/style.css">
     <title>Twitch Emote Tracker</title>
 </head>
 <body>
-    <h1>Twitch Emote Tracker</h1>
+    <div class="text-center">
+        <h1 class="display-4">Twitch Emote Tracker</h1>
+    </div>
+
     <div class="container">
         <div class="row">
             <% for (let emote of emotes) { %>
-                <div class="col-lg-1">
-                    <img id="<%= emote.name %> " src=<%= emote.imageUrl %> alt="">
+                <div class="emotebox col-lg-1">
+                    <img id="<%= emote.name %> " title="<%= emote.name %> " src=<%= emote.imageUrl %> alt="">
                     <span id="<%= emote.name %>Count"><%= emote.count %> </span>
                 </div>
             <% } %>
@@ -30,6 +34,11 @@
             let searchString = `#${dataObject.name}Count`
             let emoteCount = document.querySelector(searchString)
             emoteCount.innerText = dataObject.count
+            // THIS ANIMATION REPLAY HAS POOR PERFORMANCE APPARANTLY??
+            emoteCount.parentNode.classList.remove("run-animation")
+            emoteCount.parentNode.focus()
+            emoteCount.parentNode.classList.add("run-animation")
+
         }
     </script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js" integrity="sha384-SR1sx49pcuLnqZUnnPwx6FCym0wLsk5JZuNx2bPPENzswTNFaQU1RDvt3wT4gWFG" crossorigin="anonymous"></script>
