--- a/backend/views/home.ejs
+++ b/backend/views/home.ejs
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <link rel="stylesheet" href="/stylesheets/style.css">
-    <title>Twitch Emote Tracker</title>
+    <title>PogCount</title>
 </head>
 <body>
     <div class="text-center">
-        <h1 class="display-4">Twitch Emote Tracker</h1>
+        <h1 class="display-4">PogCount</h1>
     </div>
 
     <div class="container">
